Show/Hide Sign In
Added classes to hide sign in after completion and vice-versa

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>
       </section>
 
-      <main>
+      <main class="hidden">
         <section id="logged-in-view">
           <form id="change-password">
             <h3>Change your password:</h3>
@@ -42,6 +42,9 @@
           </form>
           <div id="sign-out">
             <button>Sign Out</button>
+          </div>
+          <div id="new-game">
+            <button type="submit">New Game!</button>
           </div>
         </section>
       </main>
