--- a/index.html
+++ b/index.html
@@ -51,17 +51,20 @@
         <!-- does this ^ need to be a form? -->
         <section id="game-board" class="hide-game container">
           <div class="row">
-            <div id="1" class="col-4 box" data-index="0"></div>
-            <div id="2" class="col-4 box border-left border-right" data-index="1"></div>
-            <div id="3" class="col-4 box" data-index="2"></div>
-            <div id="4" class="col-4 box border-top border-bottom" data-index="3"></div>
-            <div id="5" class="col-4 box border" data-index="4"></div>
-            <div id="6" class="col-4 box border-top border-bottom" data-index="5"></div>
-            <div id="7" class="col-4 box" data-index="6"></div>
-            <div id="8" class="col-4 box border-left border-right" data-index="7"></div>
-            <div id="9" class="col-4 box" data-index="8"></div>
+            <div class="col-4 box" data-cell-index="0"></div>
+            <div class="col-4 box border-left border-right" data-cell-index="1"></div>
+            <div class="col-4 box" data-cell-index="2"></div>
+            <div class="col-4 box border-top border-bottom" data-cell-index="3"></div>
+            <div class="col-4 box border" data-cell-index="4"></div>
+            <div class="col-4 box border-top border-bottom" data-cell-index="5"></div>
+            <div class="col-4 box" data-cell-index="6"></div>
+            <div class="col-4 box border-left border-right" data-cell-index="7"></div>
+            <div class="col-4 box" data-cell-index="8"></div>
           </div>
         </section>
+        <div id="game-index" class="hidden">
+          <button type="submit">Show All Games</button>
+        </div>
       </main>
     </body>
 </html>
