Check Winner function starting to work
Check winner is successful, but only after the next move following
a winning move is played. Troubleshooting that next.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
         <!-- does this ^ need to be a form? -->
         <section id="game-board" class="hide-game container">
+          <p id="win-message"></p>
           <div class="row">
             <div class="col-4 box" data-cell-index="0"></div>
             <div class="col-4 box border-left border-right" data-cell-index="1"></div>
