--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>It's Super Awesome Game Time!!</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -37,22 +37,25 @@
 
       <main>
         <section id="logged-in-view" class="hidden">
-          <form id="change-password">
+          <div>
+            <button id="settings">Settings</button>
+          </div>
+          <form id="change-password" class="hidden-settings">
             <h3>Change your password:</h3>
             <input type="password" name="passwords[old]" required placeholder="Old Password">
             <input type="password" name="passwords[new]" required placeholder="New Password">
             <button type="submit">Change Password</button>
           </form>
-          <div id="sign-out">
+          <div id="sign-out" class="hidden-settings">
             <button>Sign Out</button>
           </div>
         </section>
-        <div id="new-game" class="hidden">
+        <div id="new-game" class="hidden new-game">
           <button type="submit">New Game!</button>
         </div>
         <!-- does this ^ need to be a form? -->
         <section id="game-board" class="hide-game container">
-          <p id="win-message"></p>
+          <p id="win-message" class="col-12"></p>
           <div class="row">
             <div class="col-4 box" data-cell-index="0"></div>
             <div class="col-4 box border-left border-right" data-cell-index="1"></div>
