--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </section>
         <div id="game-index" class="hidden">
           <button type="submit">Show All Games</button>
+          <p class="game-index-qty"></p>
           <p class="game-index"></p>
         </div>
       </main>
