--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
       <section id="logged-out-view">
         <h1>Welcome to Tic-Tac-Toe!</h1>
+
         <div class="two-column-flex">
           <form id="sign-up">
             <h2>Sign up below:</h2>
@@ -43,7 +44,7 @@
           <form id="change-password" class="hidden-settings">
             <h3>Change your password:</h3>
             <input type="password" name="passwords[old]" required placeholder="Old Password">
-            <input type="password" name="passwords[new]" required placeholder="New Password">
+            <input type="password" name="passwords[new]" required placeholder="New Password"> <br>
             <button type="submit">Change Password</button>
           </form>
           <div id="sign-out" class="hidden-settings">
